# ctfcup-2023-ad

./: .gitattributes  .gitignore  README.md  check.py  forcad_config.yml
.github/workflows/: check-services.yml
checkers/: requirements.txt
checkers/bluwal/: bluwal_lib.py  checker.py
checkers/explorers/: checker.py  explorers_lib.py  gpxhelper.py
checkers/neftetochka/: checker.py  neftetochka_lib.py
checkers/oilmarket/proto/: oilmarket.proto
internal/explorers-front/: .env.development  .env.production  package-lock.json  package.json
internal/neftetochka/: Dockerfile
internal/neftetochka/app/: CMakeLists.txt
internal/neftetochka/app/conan/: deps  profile
internal/neftetochka/app/inc/crow/: crow_all.h
internal/neftetochka/app/protos/: station.proto
internal/neftetochka/app/src/: main.cpp  station.cpp  station.grpc.pb.cc  station.grpc.pb.h  station.pb.cc  station.pb.h  station_client.h
internal/neftetochka/front/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  (+1 more)
services/bluwal/: .gitignore  Dockerfile  Makefile  compose.yml  go.mod  go.sum
services/explorers/: docker-compose.yml
services/neftetochka/: .gitignore  Dockerfile  client.py  docker-compose.yml  init.sql  spl.py
services/oilmarket/: docker-compose.yml
sploits/bluwal/: bluwal_lib.py  genji_array_comparison.py
sploits/explorers/: xxe.py
sploits/neftetochka/: spl.py
sploits/oilmarket/: oilmarket_pb2.py  oilmarket_pb2.pyi  oilmarket_pb2_grpc.py  sploit.py
sploits/oilmarket/brute/: Cargo.toml
sploits/oilmarket/brute/src/: hash.rs  main.rs
(+67 files in other folders)
