[package]
name = "brute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
clap = { version = "4.4.0", features = ["derive"] }
rand = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
